--- a/dicas.html
+++ b/dicas.html
@@ -254,10 +254,10 @@
 	<div class="container-fluid">
 		<div class="row">
 			<div class="col-md-2"><a href="#"><img id="logo" src="img/logo veterinaria.png"alt="some text"width=200 height=150 ></a></div>
-			<div class="col-md-1 lista_footer"><a href="index.html">Inicio</a></div>
+			<!-- <div class="col-md-1 lista_footer"><a href="index.html">Inicio</a></div>
 			<div class="col-md-1 lista_footer"><a href="fale conosco.html">fale conosco</a></div>
 			<div class="col-md-1 lista_footer"><a href="dicas.html">Dicas</a></div>
-			<div class="col-md-1 lista_footer"><a href="sobre.html">Sobre</a></div>
+			<div class="col-md-1 lista_footer"><a href="sobre.html">Sobre</a></div> -->
 		</div>
 		<div class="row">
 			<div class="col-md-12">
