--- a/dicas.html
+++ b/dicas.html
@@ -261,7 +261,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<h6>© 2020 Pets Lover| Todos os direitos reservados. Construido por Sighy,Jonathan,Thercio,Alex.</h6>
+				<h6>© 2020 Pets Lover| Todos os direitos reservados. Construido por Alex,Jonathan,Sighy,Thércio.</h6>
 			</div>
 		</div>
 	</div>
