--- a/pg carrossel.html
+++ b/pg carrossel.html
@@ -98,7 +98,7 @@
 		</div> -->
 		<div class="row">
 			<div class="col-md-12">
-				<h6>© 2020 Pets Lover| Todos os direitos reservados. Construido por Alex,Sighy,Jonathan,Thercio,.</h6>
+				<h6>© 2020 Pets Lover| Todos os direitos reservados. Construido por Alex,Jonathan,Sighy,Thércio.</h6>
 			</div>
 		</div>
 	</div>
