--- a/sobre.html
+++ b/sobre.html
@@ -112,7 +112,7 @@
 							<!-- Dados do Programador 4 -->
 							<div class="caption"> 
 								<h2>Thércio Peixoto</h2> 
-								<p>Ajudei na elaboração e programação deste website, utilizando as tecnologias html, css, javascript e bootstrap</p> <br>
+								<p>Ajudei na programação deste website, utilizando as tecnologias html, css, javascript e bootstrap</p> <br>
 								<div id="expandirProgramador4" style="display:none">
 									<p>
 										Estudante do Curso de Análise e Desenvolvimento de Sistemas na Universidade do Grande Rio (Unigranrio).
