--- a/fale conosco.html
+++ b/fale conosco.html
@@ -55,12 +55,12 @@
 
 							<p>
 								<label for="nome">Nome:</label>
-								<input type="text" id="nome" size="30" maxlength="30" placeholder="Nome completo" autofocus>
+								<input type="text" name="Nome" id="nome" size="30" maxlength="30" placeholder="Nome completo" autofocus>
 							</p>
 							
 
 							<p><label for="email">E-mail:</label>
-								<input type="email" id="email" size="30" maxlength="40" placeholder="email completo" autofocus>
+								<input type="email" name="Email" id="email" size="30" maxlength="40" placeholder="email completo" autofocus>
 							</p>
 						</fieldset>
 
@@ -68,8 +68,8 @@
 							 <legend>Mensagem</legend>
 
 							 <p>
-								 <label for="descricao">Digite aqui:</label><br>
-							 	<textarea id="descricao" cols="40" rows="5" ></textarea>	
+								<label for="descricao">Digite aqui:</label><br>
+							 	<textarea name="Mensagem"  id="descricao" cols="40" rows="5" ></textarea>	
 							 </p>
 						</fieldset>
 
