--- a/fale conosco.html
+++ b/fale conosco.html
@@ -50,7 +50,7 @@
 					<form action="https://formspree.io/therciopeixoto@unigranrio.br"
 					method="POST">
 					
-						<fieldset>
+						<!-- <fieldset> -->
 							<legend >Identificação do Usuário</legend>
 
 							<p>
@@ -62,16 +62,16 @@
 							<p><label for="email">E-mail:</label>
 								<input type="email" name="Email" id="email" size="30" maxlength="40" placeholder="email completo" autofocus>
 							</p>
-						</fieldset>
+						<!-- </fieldset> -->
 
-						<fieldset>
+						<!-- <fieldset> -->
 							 <legend>Mensagem</legend>
 
 							 <p>
 								<label for="descricao">Digite aqui:</label><br>
 							 	<textarea name="Mensagem"  id="descricao" cols="40" rows="5" ></textarea>	
 							 </p>
-						</fieldset>
+						<!-- </fieldset> -->
 
 							
 
