--- a/fale conosco.html
+++ b/fale conosco.html
@@ -76,7 +76,7 @@
 							
 
 							<p>
-								<input type="submit" name="enviar" value="Send" class="btn btn-danger  ">
+								<input type="submit" name="enviar" value="Enviar" class="btn btn-danger  ">
 								<input type="reset" name="limpar" value="Limpar Campos" class="btn btn-danger">
 							</p>
 
