--- a/fale conosco.html
+++ b/fale conosco.html
@@ -2,7 +2,7 @@
 <!doctype html>
 <html lang='pt-br'>
 <head>
-	<title>pagina contatos</title>
+	<title>Pagina de Contatos</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" href="estilos-boostrap/bootstrap.min.css">
 	<link rel="stylesheet" href="estilos-boostrap/bootstrap-theme.min.css">
