Atualização das informações dos desenvolvedores na Pagina Sobre

--- a/sobre.html
+++ b/sobre.html
@@ -73,10 +73,10 @@
 							<!-- Dados Programador 2 -->
 							<div class="caption"> 
 								<h2>Alex</h2> 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet risus ligula. Mauris pretium magna nec porttitor vulputate.</p> <br>
+								<p>Fui o pesquisador de conteúdos e imagens desse website.</p> <br>
 									<div id="expandirProgramador2" style="display:none">
 										<p>
-											so complementar
+											Sou aluno de sistemas da informação na Universidade Unigranrio e pretendo seguir carreira como programador.
 											
 										</p> 
 									</div>	
@@ -94,10 +94,10 @@
 							<!-- Dados do Programador 1 -->
 							<div class="caption"> 
 								<h2>Jonathan</h2> 
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque sit amet risus ligula. Mauris pretium magna nec porttitor vulputate.</p> <br>
+								<p>Ajudei na pesquisa das informações deste website e algumas das imagens utilizadas.</p> <br>
 								<div id="expandirProgramador1" style="display:none">
 									<p>
-										so complementar
+										Sou aluno do curso de Sistemas da Informação na Universidade Unigranrio.
 									</p> 
 								</div>	
 								<a href="javascript:;" onmousedown="toggleDiv('expandirProgramador1');" class="btn btn-primary" role="button">Leia mais</a>
