Alteração na pagina dicas.html
Alterações e correções no texto da pagina dicas.html e dicas.css

--- a/dicas.html
+++ b/dicas.html
@@ -66,16 +66,16 @@
 						</figure>
 						<p>
 							<ul>
-								<li> Separe utensílios para serem exclusivos do pet, como toalhas e escovas</li><br><br>
-								<li> Utilize água morna, mais para fria</li><br><br>
-								<li> Cuidado para que ele não sinta frio durante o banho, pois pode ficar doente;Use sempre produtos específicos para animais, para garantir pele e pelos bonitos e saudáveis</li><br><br>
-								<li> Proteja sempre os olhos e os ouvidos do animal para que não entre água e sabão</li><br><br>
-								<li> Seque primeiro com a toalha e depois com o secador, mantendo-o distante do pelo e cuidado com a temperatura para não queimar seu cãozinho, aproveite para penteá-lo</li><br><br>
-								<li>A frequência de escovação dos pelos varia de acordo com o tipo de pelo. Os mais peludos precisam ser escovados com maior frequência, no mínimo semanalmente. Além de ser uma expressão de carinho, a escovação remove os pelos velhos, desembaraça, ativa a circulação e também remove restos de pele morta. Crie esse hábito desde cedo para que o animal se acostume</li><br><br>
-								<li> Limpe com cuidado a região dos olhos, utilize algodão seco ou embebido em água filtrada. Nunca utilize qualquer produto ou colírios sem consultar o médico veterinário</li><br><br>
-								<li> limpeza da orelha deve ser feita com cuidado, limpe somente a parte mais externa, se houver secreção pode utilizar um produto específico para este fim, mas nunca utilize cotonetes ou qualquer objeto dentro do conduto auditivo, pois além do risco de machucar o cãozinho, você pode acidentalmente empurrar a secreção para o fundo predispondo a infecções </li><br><br>
-								<li> Escove os dentes do seu animal, existem escovas e pastas específicas para cães, as pastas para humanos podem intoxicá-los </li><br><br>
-								<li> As unhas devem ser cortadas sempre por um profissional, pois precisam de um cortador específico.</li><br><br>
+								<li> Separe utensílios para serem exclusivos do pet, como toalhas e escovas</li><br>
+								<li> Utilize água morna, mais para fria</li><br>
+								<li> Cuidado para que ele não sinta frio durante o banho, pois pode ficar doente;Use sempre produtos específicos para animais, para garantir pele e pelos bonitos e saudáveis</li><br>
+								<li> Proteja sempre os olhos e os ouvidos do animal para que não entre água e sabão</li><br>
+								<li> Seque primeiro com a toalha e depois com o secador, mantendo-o distante do pelo e cuidado com a temperatura para não queimar seu cãozinho, aproveite para penteá-lo</li><br>
+								<li> A frequência de escovação dos pelos varia de acordo com o tipo de pelo. Os mais peludos precisam ser escovados com maior frequência, no mínimo semanalmente. Além de ser uma expressão de carinho, a escovação remove os pelos velhos, desembaraça, ativa a circulação e também remove restos de pele morta. Crie esse hábito desde cedo para que o animal se acostume</li><br>
+								<li> Limpe com cuidado a região dos olhos, utilize algodão seco ou embebido em água filtrada. Nunca utilize qualquer produto ou colírios sem consultar o médico veterinário</li><br>
+								<li> Limpeza da orelha deve ser feita com cuidado, limpe somente a parte mais externa, se houver secreção pode utilizar um produto específico para este fim, mas nunca utilize cotonetes ou qualquer objeto dentro do conduto auditivo, pois além do risco de machucar o cãozinho, você pode acidentalmente empurrar a secreção para o fundo predispondo a infecções </li><br>
+								<li> Escove os dentes do seu animal, existem escovas e pastas específicas para cães, as pastas para humanos podem intoxicá-los </li><br>
+								<li> As unhas devem ser cortadas sempre por um profissional, pois precisam de um cortador específico.</li><br>
 							</ul>	
 							<br>
 						</p>
@@ -86,12 +86,14 @@
 							<img src="img/parasita.png"alt="some text"width=300 height=250 class="img-thumbnail" > <br> <br>
 						</figure>
 						<p>
-							°Vermifugue seu pet rotineiramente, de maneira preventiva, a cada 3 meses, impedindo que eles tenham infestações mais graves, ou converse com o seu veterinário sobre o melhor protocolo<br>
-							°Sempre vermifugue todos os pets ao mesmo tempo<br>
-							°Não alimente o pet com carne crua;Faça a prevenção contra pulgas mensalmente<br>
-							°Remova as fezes do ambiente o mais rápido possível e higienize o ambiente com produtos à base de cloro ou amônia quaternária;Higienize diariamente comedouros e bebedouros.<br>
-							
-					 
+							<ul>
+								<li>Vermifugue seu pet rotineiramente, de maneira preventiva, a cada 3 meses, impedindo que eles tenham infestações mais graves, ou converse com o seu veterinário sobre o melhor protocolo</li><br>
+								<li>Sempre vermifugue todos os pets ao mesmo tempo</li><br>
+								<li>Não alimente o pet com carne crua;</li><br>
+								<li>Faça a prevenção contra pulgas mensalmente</li><br>
+								<li>Remova as fezes do ambiente o mais rápido possível e higienize o ambiente com produtos à base de cloro ou amônia quaternária;Higienize diariamente comedouros e bebedouros.</li><br>
+							</ul>
+						</p>
 						<h2>Sempre observe seu animalzinho!</h2>
 						<figure>
 							<img src="img/obs.jpg"alt="some text"width=300 height=250 class="img-thumbnail"> <br> <br>
@@ -112,8 +114,11 @@
 							Quando um cão se coça exageradamente, pode significar que ele está com algum parasita, como pulgas e carrapatos, ou que ele desenvolveu algum problema de pele.Para não ter dúvidas, sempre que você observar alguma dessas situações, leve o animal ao veterinário, para que ele faça o diagnóstico adequado e, se for preciso, prescreva o tratamento correto.<br><br>
 						</p>	
 						<h4>	
-							<strong> 3° - Beber mais água do que o normal </strong><br><br>
+							<strong> 3° - Beber mais água do que o normal </strong>
 						</h4>
+						<p>
+							Beber muita água — e, consequentemente, urinar mais vezes — também pode indicar que o pet está com algum distúrbio. No entanto, antes de pensar o pior, leve em consideração a alimentação do pet e a temperatura do dia, pois são fatores que influenciam diretamente.
+						</p><br>
 						<h4>
 							<strong> 4° - Frequência com que o animal urina </strong><br>
 						</h4>
@@ -152,17 +157,23 @@
 							<strong> 
 								V8 para cães <br><br>
 							</strong>
-							É uma das mais aplicadas em cachorros. Ela é polivalente, protege para diversas doenças. São elas:<br>
-							°Adenovirose<br>
-							°Cinomose<br>
-							°Coronavirosev
-							°Hepatite infecciosa canina<br>
-							°Leptospira canicola (tipo de leptospirose)<br>
-							°Leptospira  icterohaemorrhagiae (tipo de lepstospirose)<br>
-							°Parainfluenza canina<br>
-							°Parvovirose.<br>
-							Essas doenças são extremamente perigosas e podem afetar seriamente a saúde do seu pet. Algumas comprometem seriamente quando não descobertas a tempo, já outras podem levar a óbito como a parvovirose. A leptospirose é uma zoonose. Isso significa que ela pode ser passada do animal para o tutor.
-							<br><br>
+							<strong>
+								É uma das mais aplicadas em cachorros. Ela é polivalente, protege para diversas doenças. São elas:
+							</strong>
+							<ul>
+								<li>Adenovirose</li>
+								<li>Cinomose</li>
+								<li>Coronavirosev</li>
+								<li>Hepatite infecciosa canina</li>
+								<li>Leptospira canicola (tipo de leptospirose)</li>
+								<li>Leptospira  icterohaemorrhagiae (tipo de lepstospirose)</li>
+								<li>Parainfluenza canina</li>
+								<li>Parvovirose.</li><br>
+							</ul>
+							<p>
+								Essas doenças são extremamente perigosas e podem afetar seriamente a saúde do seu pet. Algumas comprometem seriamente quando não descobertas a tempo, já outras podem levar a óbito como a parvovirose. A leptospirose é uma zoonose. Isso significa que ela pode ser passada do animal para o tutor.
+								<br><br>
+							</p>
 						</p>
 
 						<p>
@@ -194,13 +205,17 @@
 
 						<p>
 							<strong>
-								Tosse dos Canis<br>
+								Tosse dos Canis<br><br>
 							</strong>
-							É uma doença transmitida por meio de 3 agentes infecciosos, entre elas estão:<br>
-							°Bordetella bronchiseptica;<br><br>
-							°Parainfluienza<br><br>
-							°Adenovírus.<br><br>
-							Ela causa febre, tosse seca, apatia, corrimento nasal e perda de apetite. É um a doença altamente contagiosa e pode ser passada por meio da tosse ou do espirro de animais contaminados. Quem toma a V8 ou a V10 está protegido em relação a contaminação pelos vírus, mas deve-se aplicar a vacina da “tosse dos canis” para garantir a proteção para a infecção causada por bactéria. Sua aplicação é dose única, aos 2 meses de vida do animal, com reforço anual.
+							É uma doença transmitida por meio de 3 agentes infecciosos, entre elas estão:<br><br>
+							<ul>
+								<li>Bordetella bronchiseptica;</li>
+								<li>Parainfluienza</li>
+								<li>Adenovírus.</li>
+							</ul><br>
+							<p>
+								Ela causa febre, tosse seca, apatia, corrimento nasal e perda de apetite. É um a doença altamente contagiosa e pode ser passada por meio da tosse ou do espirro de animais contaminados. Quem toma a V8 ou a V10 está protegido em relação a contaminação pelos vírus, mas deve-se aplicar a vacina da “tosse dos canis” para garantir a proteção para a infecção causada por bactéria. Sua aplicação é dose única, aos 2 meses de vida do animal, com reforço anual.
+							</p>
 						</p>
 
 						<h3> 
@@ -212,11 +227,13 @@
 							<strong>
 								V3 Felina<br><br>
 							</strong>
-							Os gatos também precisam de cuidados especiais no que tange à vacinação, principalmente pelo seu perfil mais “selvagem”. A V3 é uma polivalente que protege contra as seguintes doenças:<br>
-							°Panleucopenia: doença extremamente grave, que pode levar o gato a óbito em 2 ou 3 dias<br>
-							°Calicivirose: doença grave do trato respiratório;<br>
-							°Rinotraqueíte: doença grave do trato respiratório, conhecido como “gripe dos gatos”.<br>
-							<br><br>
+							Os gatos também precisam de cuidados especiais no que tange à vacinação, principalmente pelo seu perfil mais “selvagem”. A V3 é uma polivalente que protege contra as seguintes doenças:<br><br>
+							<ul>
+								<li>Panleucopenia: doença extremamente grave, que pode levar o gato a óbito em 2 ou 3 dias</li>
+								<li>Calicivirose: doença grave do trato respiratório;</li>
+								<li>Rinotraqueíte: doença grave do trato respiratório, conhecido como “gripe dos gatos”.</li>
+							</ul>
+							<br>
 						</p>
 
 						<p>
