--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
 		</div>
 		<div class="row">
 			<div class="col-md-12">
-				<h6>© 2020 Pets Lovers| Todos os direitos reservados. Construido por Alex,Jonathan,Sighy,Thércio.</h6>
+				<p>© 2020 Pets Lovers| Todos os direitos reservados. Construido por Alex,Jonathan,Sighy,Thércio.</p>
 			</div>
 		</div>
 	</div>
