Alterei o id da logo no rodapé

--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
 		<div class="row">
 			<div class="col-md-2">
 				<a href="#">
-				<img id="logo" class="img-footer"src="img/logo veterinaria.png"alt="some text"width=200 height=150>
+				<img id="logo2" class="img-footer"src="img/logo veterinaria.png"alt="some text"width=200 height=150>
 			</a>
 			</div>
 
