--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 				<div class="thumbnail"> 
 					<video width="320" height="200" controls="controls">
 						<source src="img/curiosidades.mp4" type="video/mp4">
-						<object data="" width="320" height="200" src="img/curiosidades.mp4">
+						<object data="" width="320" height="200" src="img/curiosidades.mp4" alt="Video sobre cuidados com seu pet">
 						</object>
 					</video>
 					<div class="caption"> 
