Removi o elemento object que carregava o vídeo

--- a/index.html
+++ b/index.html
@@ -136,10 +136,9 @@
 			
 			<div class="col-sm-6 col-md-4"> 
 				<div class="thumbnail"> 
-					<video width="320" height="200" controls="controls">
-						<source src="img/curiosidades.mp4" type="video/mp4">
-						<object data="" width="320" height="200" src="img/curiosidades.mp4" alt="Video sobre cuidados com seu pet">
-						</object>
+					<video width="320" height="200" controls="controls" alt="Vídeo">
+						<source src="img/curiosidades.mp4" type="video/mp4" alt="Vídeo">
+						<!-- <object data="" width="320" height="200" src="img/curiosidades.mp4" alt="Vídeo"></object alt="Vídeo"> -->
 					</video>
 					<div class="caption"> 
 						<h1>Conselhos de uma Veterinária!</h1> <br>
